@@ -137,7 +137,7 @@ $cfg = {
                          'num' => 4,
                          'sql' => q?
 drop table if exists hive_read_4;
-create table hive_read_4 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
+create external table hive_read_4 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
 alter table hive_read_4 add partition (b='1') location '/user/hcat/tests/data/studenttab10k';
 alter table hive_read_4 set fileformat rcfile;
 alter table hive_read_4 add partition (b='2') location '/user/hcat/tests/data/all100krc';
