@@ -161,7 +161,7 @@ store b into ':OUTPATH:';\,
                                  # A table with one partition in text and one in rc
                                  'num' => 4
                                 ,'hcat_prep'=>q?drop table if exists pig_read_4;
-create table pig_read_4 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
+create external table pig_read_4 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
 alter table pig_read_4 add partition (b='1') location '/user/hcat/tests/data/studenttab10k';
 alter table pig_read_4 set fileformat rcfile;
 alter table pig_read_4 add partition (b='2') location '/user/hcat/tests/data/all100krc';?
@@ -177,7 +177,7 @@ store b into ':OUTPATH:';\,
                                  'num' => 5
                                 ,'hcat_prep'=>q?create database if not exists pig_db_1;
 drop table if exists pig_db_1.pig_read_5;
-create table pig_db_1.pig_read_5 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
+create external table pig_db_1.pig_read_5 (name string, age int, gpa double) partitioned by (b string) row format delimited fields terminated by '\t' stored as textfile;
 use pig_db_1;
 alter table pig_read_5 add partition (b='1') location '/user/hcat/tests/data/studenttab10k';?
                                 ,'pig' => q\a = load 'pig_db_1.pig_read_5' using org.apache.hcatalog.pig.HCatLoader();
